# platform

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  FAQ.md  README.md  Release.txt  TESTING.md  Using_HelioCloud.md  app.py  app_config.py  cdk.context.json  config.py  connect_docdb.sh  costing.txt  manifest.csv  mms1_feeps_brst_electron_2015.csv  pyproject.toml  pytest-integration.ini  pytest-unit.ini  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer-run-as-root.json  devcontainer.json
.github/: bug_report.md
.gitlab-ci/: scan-upstream-projects.yml
.gitlab-ci/scripts/: git-push.sh  install-deps-kube.sh  install-deps.sh  send-slack-msg.sh  update-eks-addon-and-commit-if-necessary.sh
.slack/: common-footer-template.txt  update-eks-addon-aws-ebs-csi-driver.json
aws_support_scripts/s3_comparison/: .gitignore  merge_inv_files.py
aws_support_scripts/s3_deleteobjs/: make_delete_script.py
base/: README.md
base_auth/: auth_stack.py  authorization_stack.py  identity_stack.py
base_auth/static/: style.css
base_aws/: base_aws_stack.py
binderhub/: README_BINDERHUB.md  binderhub_stack.py
binderhub/deploy/: 01-tools.sh  02-deploy-k8s.sh  03-binderhub-configs.sh  03-daskhub-configs.sh  bh-config.yaml.template  bh-secrets.yaml.template  cloudformation-ec2.yaml  cluster-config.yaml.template  clusterautoscaler.yaml.template  dh-auth.yaml.template  dh-config.yaml.template
daskhub/: COST_MONITORING.md  README.md  aws_utils.py  backup.yaml  daskhub_metrics_stack.py  daskhub_stack.py  default-constants.yaml  jinja_utils.py
daskhub/deploy/: 00-bootstrap.sh  00-delete-efs-mount-targets.sh  00-install-cnf-outputs-to-k8-templates.sh  00-tools.sh  00-update-ssm-user-workspace.sh  01-deploy-k8s.sh  01-tools.sh  02-deploy-daskhub-from-ext-cloud.sh  02-deploy-daskhub-storage.sh.j2  02-deploy-daskhub.sh  02-deploy-k8s.sh  03-daskhub-configs.sh  03-deploy-daskhub.sh.j2  03-monitoring.sh  04-deploy-monitoring-storage.sh  04-deploy-monitoring.sh  05-deploy-monitoring.sh  99-delete-daskhub.sh  99-delete-daskhub.sh.j2  app.config  app.config.template  cloudformation-ec2.yaml  cloudwatch-fluent-bit-cluster-info.yaml  cluster-config.yaml.template  clusterautoscaler.yaml.template  daskhub-admin-access.yaml  (+17 more)
features/: daskhub_run_notebook.feature  daskhub_server_launch.feature  environment.py  portal_ec2_launch.feature  portal_ec2_launch_all_image_types.feature  portal_ec2_launch_all_instance_types.feature
fileregistry/: CloudMe-data-access-spec-0.1.1.md
install/: README.md  app.py  requirements.txt  runtests.sh
instance/: cjeschke-dev.yaml  default.yaml  example.yaml  gitlab-integration.yaml  heliocloud.yaml  production.yaml  staging.yaml  testing.yaml
portal/: Dockerfile  README.md  app.py  portal_stack.py  requirements.txt
registration_page/: Dockerfile  app.py  registration_page_stack.py  requirements.txt
registry/: README.md  ingester_stack.py  registry_stack.py
scripts/: docker-login-ecr-pri.sh  docker-login-ecr-pub.sh  ebs-delete-all.sh  efs-delete-all.sh  exec-devcontainer.sh  init-devcontainer.sh  install-deps-docker.sh  install-deps-no_sudo.sh  install-deps-nodejs-no_sudo.sh  install-deps-nodejs.sh  install-deps-systools.sh  production-to-staging.sh  run-unit-tests.sh  ssm-start-session-eks-admin.sh  update-ebs-csi-driver.sh  update-eks-addon.sh  update-jhuapl-operations.sh  update-nvidia-plugin.sh  update-portal-amis.sh  update_eks_version.sh
tools/: README.md  catalog.py  catalog_editor.py  download_s3_inventory.py  ingest.py  kms_delete_all_keys.py  list_users.sh  merge_inv_files.py  parse_mms_s3_inventory.py  s3_bucket_bulk_delete.py  s3_bucket_list_objects.py  s3_bucket_obj_delete.py  s3staging.py  s3test.py  upload_auth_ui.py
tools/fileregistry/scregistry/: LICENSE.txt  README.md  TODO.md  pyproject.toml  setup.cfg  setup.py  tox.ini
tools/fileregistry/scregistry/deprecated/: setup.cfg  setup.py  tox.ini
tools/fileregistry/scregistry/docs/: Notes.md  Registry Demo.ipynb  SCR-registry-spec-0.3.md  conf.py  index.rst
tools/fileregistry/scregistry/licenses/: APACHE2.rst  BSD2.rst  BSD3.rst  GPLv3.rst
tools/fileregistry/scregistry/src/: scregistry.py
tools/fileregistry/scregistry/tests/: Validation Demo.ipynb  test_catalog_registry.py  test_entire_catalog_search.py  test_file_registry.py
(+435 files in other folders)
