[metadata]
name = scregistry
version = attr: my_package.VERSION
author = Johns Hopkins University Applied Physics Laboratory LLC
author_email = sandy.antunes@jhuapl.edu
license = MIT
license_file = LICENSE.txt
url = https://heliocloud.org
description = Shared Cloud Registry Specification and API for providing and accessing cloud data sets
long_description = file: README.md

[options]
package_dir =
    = src
packages: find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "scregistry" "docs"
doctest_plus = enabled

[coverage:run]
omit =
  scregistry/__init*
  scregistry/conftest.py
  scregistry/*setup_package*
  scregistry/tests/*
  scregistry/*/tests/*
  scregistry/extern/*
  scregistry/version*
  */scregistry/__init*
  */scregistry/conftest.py
  */scregistry/*setup_package*
  */scregistry/tests/*
  */scregistry/*/tests/*
  */scregistry/extern/*
  */scregistry/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
